--- a/style.css
+++ b/style.css
@@ -10,8 +10,18 @@
 }
 #canvasDiv {
   float: right;
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
 }
 #colorsDiv {
   width: 0px;
   float: left;
+}
+
+#undoDiv {
+  position: absolute;
+  width: 0px;
+  right: 50px;
+  vertical-align: top;
 }
